# VideoFetchBot

./: .dockerignore  .gitignore  README.md  README_RU.md  chrome_bin  compose.yml  config.py  db_schema.sql  pyproject.toml  requirements.txt
bot/: broadcast_manager.py  broadcast_media.py  cookies_manager.py  download_registry.py  format_analyzer.py  handlers.py  keyboards.py  main.py  media_utils.py  progress_handler.py  proxy_checker.py  queue_manager.py  services.py  telegram_sender.py
db/: __init__.py  postgres_broadcast.py  postgres_db.py  postgres_queue.py  schema.sql
docker/: Dockerfile.pybase  bootstrap-db.sh  cleanup-loop.sh  nginx-entrypoint.sh
nginx/templates/: videofetch.http.conf.template  videofetch.https.conf.template
site/: manage.py
site/videofetch_app/: admin.py  apps.py  broadcasts.py  cleanup.py  forms.py  manager.py  models.py  presentation.py  serializers.py  tests.py  views.py
site/videofetch_app/management/commands/: cleanup_web_jobs.py
site/videofetch_app/migrations/: 0001_initial.py  0002_broadcasts.py  0003_delete_message.py
site/videofetch_app/static/videofetch_app/css/: admin.css  base.css  (+1 more)
site/videofetch_app/templates/admin/: base_site.html
site/videofetch_app/templates/forms/: url_sender.html
site/videofetch_app/templates/videofetch_app/: chat.html  index.html
site/videofetch_site/: asgi.py  settings.py  urls.py  wsgi.py
videofetcher/: __init__.py  cookies_manager.py  hls_downloader.py  initialize.py  proxy.py  service.py  service_download.py  service_extraction.py  service_playwright.py  settings.py  url_safety.py
(+9 files in other folders)
